@@ -1,3 +1,9 @@
+Tue Nov 18 10:30:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-sunos5.10.h
+        * ace/SOCK_SEQPACK_Association.cpp:
+          Fix compile problems when sctp is enabled
+
 Tue Nov 18 07:49:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/MakeProjectCreator/config/acedefaults.mpb:
